--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "b-thread",
   "version": "1.0.0",
   "description": "Behavioral Programming for JavaScript",
-  "main": "index.js",
+  "main": "lib",
+  "files": [
+    "lib"
+  ],
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "babel index.js -d lib"
   },
   "author": "Luca Matteis",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-jest": "^23.6.0",
     "babel-preset-env": "^1.7.0",
     "jest": "^23.6.0"
