--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b-thread",
+  "name": "behavioral",
   "version": "1.0.0",
   "description": "Behavioral Programming for JavaScript",
   "main": "lib",
